"Advanced" = "Advanced";
"app.device.jailbreak.description" = "Any 'jailbreak' app can access Ether-1 Wallet's keychain data and steal your wallet! Wipe this wallet immediately and restore on a secure device.";
"app.device.jailbreak.title" = "DEVICE SECURITY COMPROMISED";
"Cancel" = "Cancel";
"configureTransaction.error.gasFeeTooHigh" = "Gas Fee too high. Max available: %@";
"configureTransaction.error.gasLimitTooHigh" = "Gas Limit too high. Max available: %li";
"configureTransaction.gasLimit.label.description" = "The gas limit prevents smart contracts from consuming all your %@. We will try to calculate the gas limit automatically for you, but some smart contracts may require a custom gas limit.";
"configureTransaction.gasLimit.label.title" = "Gas Limit";
"configureTransaction.gasPrice.label.description" = "With a higher gas price, your transaction fee will be more expensive, but the %@ network will process your transaction faster.";
"configureTransaction.gasPrice.label.title" = "Gas Price";
...
"export.controlYourMoney.label.title" = "Since only you control your money, you'll need to save your backup keystore in case this app is deleted.";
"export.enterCurrentPassword.textField.title" = "Enter current password to export your wallet";
"export.enterPassword.textField.title" = "Enter password to encrypt your wallet";
"export.neverStored.label.title" = "Your wallet is never saved to cloud storage or standard device backups.";
"export.noBackup.label.title" = "No backup, no %@.";
"export.presentBackupOptions.label.title" = "Preparing backup options...";
"export.skip.button.title" = "Do it later";
"importWallet.importingIndicator.label.title" = "Importing wallet...";
"Loading" = "Loading";
"Next" = "Next";
"OK" = "OK";
"Password" = "Password";
"Refresh" = "Refresh";
...
"settings.upstreamSourceCode.button.title" = "Upstream Source Code";
"settings.support.label.title" = "Support";
"settings.termsOfService.button.title" = "Terms of Service";
"settings.upstreamTermsOfService.button.title" = "Upstream Terms of Service";
"settings.version.label.title" = "Version";
"transactions.deposit.button.title" = "Buy";
"transactions.myAddress.button.title" = "My Address";
"transactions.noTransactions.label.title" = "No Transactions Yet!";
"wallet.navigation.title" = "Wallet";
"wallets.backup.alertSheet.title" = "Backup Keystore";
"welcome.createWallet.button.title" = "CREATE WALLET";
"welcome.erc20.label.description" = "Support for ERC20 tokens by default. ";
"welcome.erc20.label.title" = "ERC20 Compatible";
"welcome.fullyTransparent.label.description" = "Code is open sourced (GPL-3.0 license) and fully audited.";
"welcome.fullyTransparent.label.title" = "Fully transparent";
"welcome.importWallet.button.title" = "IMPORT WALLET";
"welcome.privateAndSecure.label.description" = "Private keys never leave your device.";
...
