// Copyright DApps Platform Inc. All rights reserved.

import XCTest

class TrustUITests: XCTestCase {
    func testCreateWallet() {
//        let app = XCUIApplication()
//        app.buttons["CREATE WALLET"].tap()
//        app.buttons["Do it later"].tap()
//        app.alerts["Watch out!"].buttons["I understand"].tap()
//        app.buttons["My Address"].tap()
//        app.scrollViews.otherElements.buttons["Copy Wallet Address"].tap()
//        app.navigationBars["Request ETH"].buttons["Cancel"].tap()
    }
}
